@@ -2,23 +2,19 @@ package com.frontend.service;
 
 import com.frontend.entity.poolTable.PoolTable;
 import com.frontend.entity.store.Store;
-import com.frontend.entity.store.TimeSlot;
 import com.frontend.enums.PoolTableStatus;
 import com.frontend.repo.StorePricingScheduleRepository;
 import com.frontend.repo.StoreRepository;
 import com.frontend.res.store.StorePricingScheduleRes;
 import com.frontend.res.store.StoreRes;
-import com.frontend.res.store.TimeSlotRes;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import com.frontend.entity.store.StorePricingSchedule;
 
 import java.time.DayOfWeek;
 import java.time.LocalDate;
-import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.Set;
 import java.util.stream.Collectors;
 
 @Service
@@ -41,14 +37,8 @@ public class StoreService {
         storeResList.ifPresent(storeResListResult -> {
             storeResListResult.forEach(storeRes -> {
                 // 查询每个 StoreRes 的 pricingSchedules
-                List<StorePricingSchedule> pricingSchedules = getPricingSchedulesForStore(storeRes.getId(), currentDay);
-
-                Set<StorePricingScheduleRes> scheduleResList = pricingSchedules.stream()
-                        .map(this::convertStorePricingScheduleToRes)
-                        .collect(Collectors.toSet());
-
-                storeRes.setPricingSchedules((List<StorePricingScheduleRes>) scheduleResList);
-
+                List<StorePricingScheduleRes> pricingSchedules = getPricingSchedulesForStore(storeRes.getId(), currentDay);
+                storeRes.setPricingSchedules(pricingSchedules);
             });
         });
 
@@ -56,23 +46,27 @@ public class StoreService {
     }
 
     // 获取定价信息
-    private List<StorePricingSchedule> getPricingSchedulesForStore(Long storeId, String currentDay) {
+    private List<StorePricingScheduleRes> getPricingSchedulesForStore(Long storeId, String currentDay) {
         // 使用更新后的查询方法
         return storePricingScheduleRepository.findByStoreIdAndDayOfWeek(storeId, currentDay);
     }
 
+
+
+
+
     public List<StoreRes> findAll() {
         return storeRepository.findAll().stream()
-                .map(this::convert) // 使用 convert 方法转换 Store -> StoreRes
-                .collect(Collectors.toList());
+                .map(StoreService::convert) // 使用 convert 方法转换 Store -> StoreRes
+                .toList();
     }
 
-    public StoreRes convert(Store store) {
+
+    public static StoreRes convert(Store store) {
         if (store == null) {
             return null;
         }
 
-        // 获取池台的可用和已使用数量
         long availableCount = store.getPoolTables().stream()
                 .filter(poolTable -> !poolTable.getIsUse())
                 .count();
@@ -85,18 +79,46 @@ public class StoreService {
         DayOfWeek currentDay = LocalDate.now().getDayOfWeek();
         String currentDayString = currentDay.toString().toLowerCase();
 
+        System.out.println("Current day: [" + currentDayString + "]");  // 打印当前星期几
+        System.out.println("Current day length: " + currentDayString.length());
+
         // 查找当天对应的定价时段
         StorePricingSchedule currentSchedule = store.getPricingSchedules().stream()
-                .filter(schedule -> schedule.getDayOfWeek().toLowerCase().equals(currentDayString))
+                .peek(schedule -> {
+                    String dayOfWeek = schedule.getDayOfWeek().trim().toLowerCase();
+                    System.out.println("Schedule day: [" + dayOfWeek + "]");
+                    System.out.println("Schedule day length: " + dayOfWeek.length());
+                    System.out.println("Comparison result: " + dayOfWeek.equals(currentDayString));
+
+                    // 打印字符的ASCII码，查看是否有隐藏字符
+                    System.out.println("Schedule day ASCII: " + dayOfWeek.chars()
+                            .mapToObj(ch -> String.format("%d ", ch))
+                            .collect(Collectors.joining()));
+                    System.out.println("Current day ASCII: " + currentDayString.chars()
+                            .mapToObj(ch -> String.format("%d ", ch))
+                            .collect(Collectors.joining()));
+                })
+                .filter(schedule -> {
+                    String dayOfWeek = schedule.getDayOfWeek().trim().toLowerCase();
+                    return dayOfWeek.equals(currentDayString);  // 确保比较时去空格并统一为小写
+                })
                 .findFirst()
                 .orElseThrow(() -> new RuntimeException("没有找到当天的时段信息: " + currentDayString));
 
         // 获取并封装所有定价时段信息
         List<StorePricingScheduleRes> pricingScheduleResList = store.getPricingSchedules().stream()
-                .map(this::convertStorePricingScheduleToRes) // 使用转换方法
+                .map(schedule -> new StorePricingScheduleRes(
+                        schedule.getDayOfWeek(),
+                        schedule.getRegularStartTime(),
+                        schedule.getRegularEndTime(),
+                        schedule.getRegularRate(),
+                        schedule.getDiscountStartTime(),
+                        schedule.getDiscountEndTime(),
+                        schedule.getDiscountRate()
+                ))
                 .collect(Collectors.toList());
 
-        // 返回 StoreRes 对象
+        // 返回StoreRes对象
         return new StoreRes(
                 store.getId(),
                 store.getUid(),
@@ -115,51 +137,8 @@ public class StoreService {
     }
 
 
-    // 将 StorePricingSchedule 转换为 StorePricingScheduleRes
-    private StorePricingScheduleRes convertStorePricingScheduleToRes(StorePricingSchedule schedule) {
-        List<TimeSlotRes> regularTimeSlotsRes = new ArrayList<>();
-        List<TimeSlotRes> discountTimeSlotsRes = new ArrayList<>();
 
-        for (TimeSlot slot : schedule.getTimeSlots()) {
-            TimeSlotRes res = new TimeSlotRes(slot.getStartTime(), slot.getEndTime(), slot.getIsDiscount());
-            if (slot.getIsDiscount()) {
-                discountTimeSlotsRes.add(res);
-            } else {
-                regularTimeSlotsRes.add(res);
-            }
-        }
 
-        // rates 可以選擇用 TimeSlot 中的 rate，也可以保留 schedule 上的欄位（看你最終要不要移除那兩欄）
-        return new StorePricingScheduleRes(
-                schedule.getDayOfWeek(),
-                regularTimeSlotsRes,
-                discountTimeSlotsRes,
-                schedule.getRegularRate(),   // 或者改 null
-                schedule.getDiscountRate()   // 或者改 null
-        );
-    }
-
-    private StorePricingScheduleRes convertToStorePricingScheduleRes(StorePricingSchedule schedule) {
-        List<TimeSlotRes> timeSlotResList = schedule.getTimeSlots().stream()
-                .map(slot -> new TimeSlotRes(slot.getStartTime(), slot.getEndTime(), slot.getIsDiscount()))
-                .collect(Collectors.toList());
-
-        return StorePricingScheduleRes.builder()
-                .dayOfWeek(schedule.getDayOfWeek())
-                .regularRate(schedule.getRegularRate())
-                .discountRate(schedule.getDiscountRate())
-                .regularTimeSlots(schedule.getTimeSlots().stream()
-                        .filter(slot -> !slot.getIsDiscount())
-                        .map(slot -> new TimeSlotRes(slot.getStartTime(), slot.getEndTime(), false))
-                        .collect(Collectors.toList()))
-                .discountTimeSlots(schedule.getTimeSlots().stream()
-                        .filter(TimeSlot::getIsDiscount)
-                        .map(slot -> new TimeSlotRes(slot.getStartTime(), slot.getEndTime(), true))
-                        .collect(Collectors.toList()))
-                .build();
-
-    }
 
 
 }
-
